--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KeyData</title>
+    <!-- Link of tab logo -->
+    <link rel="shortcut icon" type="image/x-icon" href="Keydata copy.ico">
     <!-- Link to css -->
     <link rel="stylesheet" href="style.css">
     <!-- Link to jsfile -->
